--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -12,16 +12,17 @@ on:
 jobs:
   gitHub-actions-demo:
     runs-on: ubuntu-latest
-    
-    env:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up SonarQube environment variables
+      run: |
+        echo "SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}" >> $GITHUB_ENV
+        echo "SONAR_HOST_URL=${{ secrets.SONAR_HOST_URL }}" >> $GITHUB_ENV
+
     - name: Run SonarQube workflow
-      uses: Prasanna-source31/Reusable/.github/workflows/SonarQube.yml@main
+      uses: Prasanna-source31/Reusable@main
       with:
         username: ${{ github.event.inputs.username }}
