--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -11,6 +11,18 @@ on:
 
 jobs:
   gitHub-actions-demo:
-    uses: Prasanna-source31/Reusable/.github/workflows/SonarQube.yml@main
+    runs-on: ubuntu-latest
+
+    env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Run SonarQube workflow
+      uses: Prasanna-source31/Reusable/.github/workflows/SonarQube.yml@main
   #github-actions-input-demo:
     #uses: amulyakashyap09/resuable-workflows/.github/workflows/manual-trigger-job.yml@main
