--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -24,5 +24,5 @@ jobs:
 
     - name: Run SonarQube workflow
       uses: Prasanna-source31/Reusable/.github/workflows/SonarQube.yml@main
-  #github-actions-input-demo:
-    #uses: amulyakashyap09/resuable-workflows/.github/workflows/manual-trigger-job.yml@main
+      with:
+        username: ${{ github.event.inputs.username }}
