--- a/.github/workflows/caller1.yml
+++ b/.github/workflows/caller1.yml
@@ -16,5 +16,8 @@ jobs:
       username: Prasanna
     secrets:
       token: ${{ secrets.TOKEN1 }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
 
 
