--- a/.github/workflows/080-resusable-workflow-caller.yml
+++ b/.github/workflows/080-resusable-workflow-caller.yml
@@ -11,15 +11,10 @@ on:
 
 jobs:
   call-workflow-A:
-    uses: HoussemDellai/github-actions-course/.github/workflows/080-reusable-workflow-called.yml@main
+    uses: Prasanna-source31/Test/.github/workflows/080-reusable-workflow-called.yml@main
     with:
-      username: Houssem
+      username: Prasanna
     secrets:
-      token: ${{ secrets.TOKEN }}
+      token: ${{ secrets.TOKEN1}}
 
-  call-workflow-B:
-    uses: HoussemDellai/github-actions-course/.github/workflows/080-reusable-workflow-called.yml@main
-    with:
-      username: Dellai
-    secrets:
-      token: ${{ secrets.TOKEN }}
+  
