--- a/.github/workflows/caller1.yml
+++ b/.github/workflows/caller1.yml
@@ -5,6 +5,8 @@ on:
     branches: main
   pull_request:
     branches: main
+  schedule:
+    - cron: '30 5 * * 1-5'  # Run every day at 10:00 AM (IST)
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
