--- a/.github/workflows/caller1.yml
+++ b/.github/workflows/caller1.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: main
   pull_request:
-    branches: main
+    branches:
+     - main
+     - develop
   schedule:
     - cron: '30 5 * * 1-5'  # Run every day at 10:00 AM (IST)
 
